correcao de funcao de logica de negocios